--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "test",
+  "homepage": "https://achrafelayedi.github.io/React-hydraulic-forecasts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.0",
+    "gh-pages": "^3.2.3",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "xlsx": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
