--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-chartjs-2": "^3.0.4",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-leaflet": "^3.1.0",
+    "react-leaflet-geosearch": "^0.3.4",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1",
     "xlsx": "^0.17.0"
   },
