--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "homepage": "https://achrafelayedi.github.io/Testy",
+  "homepage": "https://achrafelayedi.github.io/React-hydraulic-forecasts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
