--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
+    "react-date-picker": "^8.3.2",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
